# dofus-generate-stuff

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  README.md  aliases.js  download_data.sh  input.json  search-index.js  settings.html  source-files.js
doc/: generate_imgs.py
dofus_stuff/: all.html  index.html  sidebar-items.js
dofus_stuff/character/: enum.CharacterError.html  enum.RawCaracsValue.html  index.html  sidebar-items.js  struct.Character.html  struct.ItemSlot.html  struct.RawCaracs.html
dofus_stuff/dofapi/: enum.CaracKind.html  enum.ConditionAtom.html  enum.Effect.html  enum.Element.html  enum.ItemType.html  fn.fix_all_trophy.html  index.html  sidebar-items.js  struct.CaracLines.html  struct.Condition.html  struct.Equipement.html  struct.Set.html  struct.SpellEffects.html
dofus_stuff/dofapi/carac/: enum.CaracKind.html  struct.CaracLines.html
dofus_stuff/dofapi/condition/: enum.ConditionAtom.html  struct.Condition.html
dofus_stuff/dofapi/effect/: enum.Effect.html  enum.Element.html  struct.SpellEffects.html
dofus_stuff/dofapi/equipement/: enum.ItemType.html  fn.fix_all_trophy.html  struct.Equipement.html
dofus_stuff/dofapi/set/: struct.Set.html
dofus_stuff/search/: fn.eval_character.html  fn.optimize_character.html  index.html  sidebar-items.js
examples/: ambush.json  earth_iop.json  spark.json
src/: character.rs  input.rs  lib.rs  main.rs  rls.rs  search.rs
src/dofapi/: carac.rs  condition.rs  effect.rs  equipement.rs  mod.rs  set.rs
src/dofus_stuff/: character.rs.html  lib.rs.html  rls.rs.html  search.rs.html
(+22 files in other folders)
