[package]
name = "dofus-stuff"
version = "0.1.0"
authors = ["Rémi Dupré <remim.dupre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
rand = "0.7"
rayon = "1.2"
regex = "1.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
